--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^5.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
